@@ -4303,6 +4303,22 @@ namespace http {
 				m_mainworker.m_eventsystem.LoadEvents();
 				root["status"] = "OK";
 			}
+			else if (cparam == "load_recents")
+			{
+				root["title"] = "LoadRecentEvents";
+				std::string recent_list;
+				m_sql.GetPreferencesVar("events_recent_list", recent_list);
+				root["status"] = "OK";
+				root["result"] = recent_list;
+
+			}
+			else if (cparam == "store_recents")
+			{
+				root["title"] = "StoreRecentEvents";
+				std::string recent_list = request::findValue(&req, "recent_list");
+				m_sql.UpdatePreferencesVar("events_recent_list", recent_list);
+				root["status"] = "OK";
+			}
 			else if (cparam == "currentstates")
 			{
 				std::vector<CEventSystem::_tDeviceStatus> devStates;
